--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         #merchvideo3 {
             display: none;
         }
+        #scarypic {
+            display: none;
+        }
     </style>
     <script type='text/javascript'>
 
         var st = 0;
+        var startScare = true;
 
         function playvid(videoNumber){
 
@@ -36,7 +40,7 @@
                     var vid = document.getElementById("merchvideo3");
                     st = videoNumber;
                     break;
-            }
+            };
 
             vid.style.display = "block"
             vid.play();
@@ -50,9 +54,14 @@
                 else{
                     videoNumber = 0;
                     playvid(videoNumber);
-                }
-            }, 900000);        //Change time to 15 minutes!!!!
-        }
+                };
+            }, 900000);
+
+            if(startScare){
+                scare();
+                startScare = false;
+            }
+        };
 
         function videoFinished(){
             switch (st) {
@@ -67,14 +76,31 @@
                 case 2:
                     var vid = document.getElementById("merchvideo3");
                     break;
-            }
+            };
 
             //console.log("Video finished playing. hidding it.");
             vid.style.display = "none";
-        }
+        };
+
+        function scare(){
+            var chance = Math.floor(Math.random() * 5);
+
+            if(chance == 3){
+                var pic = document.getElementById("scarypic");
+                pic.style.display = "block"
+                setTimeout(() => {
+                    pic.style.display = "none";
+                }, 300);
+            };
+
+            setTimeout(() => {
+                scare();
+            }, 600000);
+        };
 
     </script>
     <body onload="playvid(0)">
+        <img src="./scarypic.jpg" id="scarypic">
         <video src="./skymerch_ol_1.webm" width="1000px" id="merchvideo" muted >Sky merch 1</video>
         <video src="./skymerch_ol_2.webm" width="1000px" id="merchvideo2" muted >Sky merch 2</video>
         <video src="./skymerch_ol_3.webm" width="1000px" id="merchvideo3" muted >Sky merch 3</video>
