Fixing pre fire start

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
                     break;
             };
 
-            vid.style.display = "block"
             vid.play();
+            setTimeout(() => {
+                vid.style.display = "block";
+            }, 100);
+            
             vid.addEventListener('ended',videoFinished,false);
 
             setTimeout(() => {
